# auditgraph

./: .env.docker.example  .env.example  .gitignore  .gitleaks.toml  AGENT-START_HERE.md  Dockerfile.admin  Dockerfile.api  Dockerfile.app  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  newui.md  wrangler.toml
backend/: .dockerignore  .env.example  .sql-lint-baseline.json  .sso-lint-baseline.json  Dockerfile  SCORING_CALIBRATION.md  add_check_credentials_call.py  add_check_credentials_method.py  add_credential_checker_init.py  add_import.py  add_spn_credentials_table.sql  api_contract.json  auditgraph_restart.sh  check_latest.py  check_medium_risks.py  credential_checker.py  discovery_results_20260121_160236.json  discovery_results_20260122_114138.json  discovery_results_20260122_115158.json  discovery_results_20260122_120425.json  discovery_results_20260122_120744.json  discovery_results_20260122_121851.json  discovery_results_20260123_101925.json  discovery_results_20260123_102517.json  discovery_results_20260123_104952.json  discovery_results_20260123_123737.json  discovery_results_20260123_141148.json  discovery_results_20260123_142400.json  docker-compose.yml  final_pattern_update.py  fix_mspim.py  fix_old_field_references.py  newstructure.md  pyproject.toml  requirements-dev.txt  requirements.txt  startup.sh  test.py  update_credential_fields.py  update_patterns.py  (+1 more)
backend/app/: api.py  config.py  connectors.py  constants.py  database.py  encryption.py  idempotency.py  logging_config.py  main.py  metrics.py  pricing.py  resilience.py  scheduler.py  secret_manager.py  secrets.py  security.py  security_events.py  test_discovery.py  test_drift.py  utils.py
backend/config/: ai_agent_patterns.json
backend/docs/: BUILDER_STATE_MATRIX.md  DB_MIGRATION.md
backend/migrations/: 001_create_identity_roles.sql  002_create_credentials.sql  003_create_graph_api_permissions.sql  004_create_sp_app_roles.sql  005_create_role_intelligence.sql  006_multi_cloud_identity_schema.sql  007_create_sp_ownership.sql  008_enhanced_risk_scoring.sql  009_role_usage_intelligence.sql  010_create_pim_tables.sql  011_create_ca_tables.sql  012_create_remediation_playbooks.sql  013_create_drift_reports.sql  014_create_settings.sql  015_create_activity_log.sql  016_rls_tenant_isolation.sql  033_reporting_engine.sql  (+131 more)
(+1024 files in other folders)
